[gd_scene load_steps=9 format=2]

[ext_resource path="res://BulkTranslator.gd" type="Script" id=1]
[ext_resource path="res://fonts/noto_sans_ui_bold.tres" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/noto_sans_ui_regular.tres" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/hack_regular.tres" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 5 )

[node name="BulkTranslator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="Editor" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Controls" type="HBoxContainer" parent="Editor"]
margin_right = 1016.0
margin_bottom = 40.0

[node name="Overwrite" type="CheckButton" parent="Editor/Controls"]
margin_right = 146.0
margin_bottom = 40.0
pressed = true
text = "Overwrite"

[node name="BulkTranslateDir" type="Button" parent="Editor/Controls"]
margin_left = 150.0
margin_right = 282.0
margin_bottom = 40.0
text = "Bulk Translate Dir"

[node name="BulkTranslateFiles" type="Button" parent="Editor/Controls"]
margin_left = 286.0
margin_right = 428.0
margin_bottom = 40.0
text = "Bulk Translate Files"

[node name="WorkingDir" type="LineEdit" parent="Editor/Controls"]
margin_left = 915.0
margin_right = 1016.0
margin_bottom = 40.0
size_flags_horizontal = 10
text = "[working dir]"
align = 2
editable = false
expand_to_text_length = true

[node name="HSplitContainer" type="HSplitContainer" parent="Editor"]
margin_top = 44.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceFiles" type="VBoxContainer" parent="Editor/HSplitContainer"]
margin_right = 282.0
margin_bottom = 548.0

[node name="Label" type="Label" parent="Editor/HSplitContainer/SourceFiles"]
margin_left = 100.0
margin_right = 182.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Source Files"
align = 1
valign = 1

[node name="SourceFiles" type="TextEdit" parent="Editor/HSplitContainer/SourceFiles"]
margin_top = 24.0
margin_right = 282.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/safe_line_number_color = Color( 0.921569, 0.580392, 0.2, 1 )
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 4 )
readonly = true
highlight_current_line = true
show_line_numbers = true
smooth_scrolling = true
caret_blink = true
caret_blink_speed = 0.5

[node name="HSplitContainer" type="HSplitContainer" parent="Editor/HSplitContainer"]
margin_left = 294.0
margin_right = 1016.0
margin_bottom = 548.0
split_offset = 200

[node name="OutputFiles" type="VBoxContainer" parent="Editor/HSplitContainer/HSplitContainer"]
margin_right = 285.0
margin_bottom = 548.0

[node name="Label" type="Label" parent="Editor/HSplitContainer/HSplitContainer/OutputFiles"]
margin_left = 100.0
margin_right = 185.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Output Files"
align = 1
valign = 1

[node name="OutputFiles" type="TextEdit" parent="Editor/HSplitContainer/HSplitContainer/OutputFiles"]
margin_top = 24.0
margin_right = 285.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 4 )
readonly = true
highlight_current_line = true
show_line_numbers = true
bookmark_gutter = true
smooth_scrolling = true
caret_blink = true
caret_blink_speed = 0.5

[node name="VSplitContainer" type="VSplitContainer" parent="Editor/HSplitContainer/HSplitContainer"]
margin_left = 297.0
margin_right = 722.0
margin_bottom = 548.0
split_offset = 300

[node name="OutputCode" type="VBoxContainer" parent="Editor/HSplitContainer/HSplitContainer/VSplitContainer"]
margin_right = 425.0
margin_bottom = 324.0

[node name="Label" type="Label" parent="Editor/HSplitContainer/HSplitContainer/VSplitContainer/OutputCode"]
margin_left = 168.0
margin_right = 257.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Output Code"
align = 1
valign = 1

[node name="OutputCode" type="TextEdit" parent="Editor/HSplitContainer/HSplitContainer/VSplitContainer/OutputCode"]
margin_top = 24.0
margin_right = 425.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 4 )
readonly = true
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
smooth_scrolling = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Warnings" type="VBoxContainer" parent="Editor/HSplitContainer/HSplitContainer/VSplitContainer"]
margin_top = 336.0
margin_right = 425.0
margin_bottom = 548.0

[node name="Label" type="Label" parent="Editor/HSplitContainer/HSplitContainer/VSplitContainer/Warnings"]
margin_left = 179.0
margin_right = 245.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Warnings"
align = 1
valign = 1

[node name="Warnings" type="TextEdit" parent="Editor/HSplitContainer/HSplitContainer/VSplitContainer/Warnings"]
margin_top = 24.0
margin_right = 425.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 4 )
readonly = true
syntax_highlighting = true
smooth_scrolling = true
caret_blink = true
caret_blink_speed = 0.5

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 972.0
margin_bottom = 488.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open File(s)"
dialog_hide_on_ok = true
mode = 1
access = 2

[connection signal="pressed" from="Editor/Controls/BulkTranslateDir" to="." method="_on_BulkTranslateDir_pressed"]
[connection signal="pressed" from="Editor/Controls/BulkTranslateFiles" to="." method="_on_BulkTranslateFiles_pressed"]
[connection signal="cursor_changed" from="Editor/HSplitContainer/HSplitContainer/OutputFiles/OutputFiles" to="." method="_on_OutputFiles_cursor_changed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
